# vertexy

./: .gitignore  .gitmodules  3RDPARTYLICENSES.TXT  LICENSE  README.md
csolver/: CMakeLists.txt  csolver.natvis
csolver/src/private/: ConstraintSolver.cpp  ConstraintSolverStats.cpp
csolver/src/private/constraints/: AllDifferentConstraint.cpp  CardinalityConstraint.cpp  ClauseConstraint.cpp  ConstraintFactoryParams.cpp  ConstraintGraphRelationInfo.cpp  DisjunctionConstraint.cpp  IffConstraint.cpp  InequalityConstraint.cpp  MaxOccurrenceExplainer.cpp  OffsetConstraint.cpp  ReachabilityConstraint.cpp  TableConstraint.cpp
csolver/src/private/decision/: CoarseLRBHeuristic.cpp  LogOrderHeuristic.cpp  StaticOrderHeuristic.cpp  VSIDSHeuristic.cpp
csolver/src/private/ds/: DisjointSet.cpp  HallIntervalPropagation.cpp  TimeUtils.cpp
csolver/src/private/learning/: ConflictAnalyzer.cpp
csolver/src/private/restart/: LBDRestartPolicy.cpp  LubyRestartPolicy.cpp
csolver/src/private/topology/: BipartiteGraph.cpp  GraphRelations.cpp  GridTopology.cpp  Topology.cpp
csolver/src/private/util/: Logging.cpp  SolverDecisionLog.cpp
csolver/src/private/variable/: AssignmentStack.cpp  BooleanVariablePropagator.cpp  BooleanVariablePropagator.h  CommittableVariableDatabase.cpp  GenericVariablePropagator.cpp  GenericVariablePropagator.h  HistoricalVariableDatabase.cpp  HistoricalVariableDatabase.h  SegmentedVariablePropagator.cpp  SegmentedVariablePropagator.h  SolverVariableDatabase.cpp  StubVariablePropagator.h  WordVariablePropagator.cpp  WordVariablePropagator.h
csolver/src/public/: ConstraintSolver.h  ConstraintSolverStats.h  ConstraintTypes.h  SignedClause.h
csolver/src/public/constraints/: AllDifferentConstraint.h  CardinalityConstraint.h  ClauseConstraint.h  ConstraintFactoryParams.h  ConstraintGraphRelationInfo.h  ConstraintOperator.h  DisjunctionConstraint.h  IBacktrackingSolverConstraint.h  ISolverConstraint.h  IffConstraint.h  InequalityConstraint.h  MaxOccurrenceExplainer.h  OffsetConstraint.h  ReachabilityConstraint.h  TableConstraint.h
csolver/src/public/decision/: CoarseLRBHeuristic.h  ISolverDecisionHeuristic.h  LogOrderHeuristic.h  StaticOrderHeuristic.h  VSIDSHeuristic.h
csolver/src/public/ds/: AveragingBoundedQueue.h  DisjointSet.h  ESTree.h  FastLookupSet.h  HallIntervalPropagation.h  PriorityHeap.h  RamalReps.h  SparseSet.h  ValueBitset.h
csolver/src/public/learning/: ConflictAnalyzer.h
csolver/src/public/restart/: IRestartPolicy.h  LBDRestartPolicy.h  LubyRestartPolicy.h  NoRestartPolicy.h
csolver/src/public/topology/: BacktrackingDigraphTopology.h  BipartiteGraph.h  DigraphEdgeTopology.h  DigraphTopology.h  GraphArgumentTransformer.h  GraphRelations.h  GridTopology.h  HalfEdgePlanarTopology.h  IPlanarTopology.h  ITopology.h  PlanarTopology.h  ResidualGraphTopology.h  ReversedTopology.h  Topology.h  TopologyLink.h  TopologySearch.h  TopologyVertexData.h
csolver/src/public/util/: Asserts.h  BitUtils.h  EventDispatcher.h  Logging.h  SolverDecisionLog.h  TimeUtils.h
csolver/src/public/variable/: AssignmentStack.h  CommittableVariableDatabase.h  IVariableDatabase.h  IVariablePropagator.h  IVariableWatchSink.h  SolverVariableDatabase.h  SolverVariableDomain.h
csolverTests/: CMakeLists.txt
csolverTests/src/private/: AllTests.cpp  BasicTests.cpp  Maze.cpp  NQueens.cpp  Sudoku.cpp  TowersOfHanoi.cpp
csolverTests/src/public/: AllTests.h  BasicTests.h  Maze.h  NQueens.h  Sudoku.h  TowersOfHanoi.h
testHarness/: CMakeLists.txt
testHarness/src/: SolverTest.cpp
vertexy/: CMakeLists.txt  vertexy.natvis
vertexy/src/private/: ConstraintSolver.cpp  ConstraintSolverStats.cpp  EASTL.cpp
vertexy/src/private/constraints/: AllDifferentConstraint.cpp  CardinalityConstraint.cpp  ClauseConstraint.cpp  ConstraintFactoryParams.cpp  ConstraintGraphRelationInfo.cpp  DisjunctionConstraint.cpp  IConstraint.cpp  IffConstraint.cpp  InequalityConstraint.cpp  MaxOccurrenceExplainer.cpp  OffsetConstraint.cpp  ReachabilityConstraint.cpp  ShortestPathConstraint.cpp  SumConstraint.cpp  TableConstraint.cpp  TopologyConnectionConstraint.cpp  TopologySearchConstraint.cpp
vertexy/src/private/decision/: CoarseLRBHeuristic.cpp  LogOrderHeuristic.cpp  StaticOrderHeuristic.cpp  VSIDSHeuristic.cpp
vertexy/src/private/ds/: DisjointSet.cpp  HallIntervalPropagation.cpp  TimeUtils.cpp
vertexy/src/private/learning/: ConflictAnalyzer.cpp
vertexy/src/private/prefab/: Prefab.cpp  PrefabManager.cpp  Tile.cpp  TileSolver.cpp
vertexy/src/private/program/: FormulaDomain.cpp  Program.cpp  ProgramAST.cpp  ProgramCompiler.cpp  ProgramInstantiators.cpp  ProgramSymbol.cpp
vertexy/src/private/restart/: LBDRestartPolicy.cpp  LubyRestartPolicy.cpp
vertexy/src/private/rules/: RuleDatabase.cpp  UnfoundedSetAnalyzer.cpp
vertexy/src/private/tileset/: TileSolver.cpp
vertexy/src/private/topology/: BipartiteGraph.cpp  GraphRelations.cpp  GridTopology.cpp  Topology.cpp
vertexy/src/private/util/: Logging.cpp  SolverDecisionLog.cpp
vertexy/src/private/variable/: AssignmentStack.cpp  BooleanVariablePropagator.cpp  BooleanVariablePropagator.h  CommittableVariableDatabase.cpp  GenericVariablePropagator.cpp  GenericVariablePropagator.h  HistoricalVariableDatabase.cpp  HistoricalVariableDatabase.h  SegmentedVariablePropagator.cpp  SegmentedVariablePropagator.h  SolverVariableDatabase.cpp  StubVariablePropagator.h  WordVariablePropagator.cpp  WordVariablePropagator.h
vertexy/src/public/: ConstraintSolver.h  ConstraintSolverResult.h  ConstraintSolverStats.h  ConstraintTypes.h  SignedClause.h
vertexy/src/public/constraints/: AllDifferentConstraint.h  CardinalityConstraint.h  ClauseConstraint.h  ConstraintFactoryParams.h  ConstraintGraphRelationInfo.h  ConstraintOperator.h  DisjunctionConstraint.h  IBacktrackingSolverConstraint.h  IConstraint.h  ISolverConstraint.h  IffConstraint.h  InequalityConstraint.h  MaxOccurrenceExplainer.h  (+7 more)
vertexyTestHarness/: CMakeLists.txt
vertexyTestHarness/src/: SolverTest.cpp  SolverTest.h
vertexyWFC/: CMakeLists.txt
vertexyWFC/src/: WFC.cpp  WFC.h  cbmp.cpp
(+111 files in other folders)
